--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -5,7 +5,7 @@ spring:
     datasource:
         name: test
         drive-class-name: com.mysql.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/test?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+        url: jdbc:mysql://localhost:3306/test?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
         username: root
         password: 123456
         maxActive: 20
@@ -26,3 +26,6 @@ pagehelper:
     reasonable: true
     supportMethodsArguments: true
     params: count=countSql
+    
+logging:
+   config:classpath:log/logback-spring.xml
